# ollama-tui

./: CHANGELOG.md  LICENSE  Makefile  README.md  ollama_tui.py  pyproject.toml  run.sh
.github/workflows/: release.yml
