[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ollama-tui"
version = "1.0.0"
description = "A terminal UI for chatting with Ollama models"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.80.0",
    "rich>=13.0.0",
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
changelog_file = "CHANGELOG.md"
build_command = ""
upload_to_pypi = false
upload_to_release = true

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "perf", "refactor", "docs", "chore", "test", "ci"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
